--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ gunicorn = "*"
 cloudinary = "*"
 flask-admin = "*"
 typing-extensions = "*"
+flask-login = "*"
 
 [requires]
 python_version = "3.10"
